# silero-vad-rs

./: .cargoignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  setup.sh
examples/: basic_vad.rs  generate_test_audio.rs  streaming_vad.rs
examples/ort/: cuda_arc.rs  custom_ops.rs  ort_example.rs
models/: models.yml
src/: lib.rs  model.rs  utils.rs  vad.rs
tests/: model_download_test.rs
tools/: convert_model.py
